--- a/assets/style.css
+++ b/assets/style.css
@@ -38,3 +38,44 @@ button {
     border-radius: 5px;
     padding: 5px 10px;
 }
+
+form > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+form {
+    width: 250px;
+    margin: 25px auto;
+}
+
+.message {
+    margin: 15px auto !important;
+    background-color: lightgray;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 10px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.message::before {
+    background-image: url(/assets/warning.svg);
+    content: "";
+    width: 30px;
+    height: 30px;
+    float: left;
+    background-size: cover;
+}
+
+.message > div {
+    width: 80%;
+}
+
+.fixed-width {
+    width: 250px;
+    margin: 0 auto;
+}
