--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@ body {
     font-family: ProximaNova, Helvetica, sans-serif;
     margin: 0;
     color: rgb(36, 47, 51);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 header {
@@ -13,6 +17,20 @@ header {
     padding: 5px 15px;
 }
 
+footer {
+    background-color: rgb(0, 67, 89);
+    color: white;
+    padding: 5px 15px;
+}
+
+main {
+    padding: 5px 15px;
+}
+
+footer > hr {
+    border-color: white;
+}
+
 ul#menu {
     list-style-type: none;
     display: flex;
@@ -22,12 +40,15 @@ ul#menu {
 }
 
 ul#menu > li > a {
-    color: white;
-    text-decoration: none;
     text-transform: uppercase;
 }
 
-ul#menu > li > a:hover {
+a.white {
+    color: white;
+    text-decoration: none;
+}
+
+a.white:hover {
     color: #829399;
 }
 
