--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ header {
     background-color: rgb(0, 67, 89);
     color: white;
     padding: 5px 15px;
+    justify-content: space-between;
 }
 
 footer {
@@ -31,16 +32,18 @@ footer > hr {
     border-color: white;
 }
 
-ul#menu {
+ul.menu {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    width: 110%;
     justify-content: space-between;
+    padding-left: 0;
+    align-items: center;
 }
 
-ul#menu > li > a {
+ul.menu > li > a {
     text-transform: uppercase;
+    padding-left: 20px;
 }
 
 a.white {
