--- a/assets/style.css
+++ b/assets/style.css
@@ -135,6 +135,8 @@ tr:nth-child(even) {
 .entry-card {
     border: 1px solid #bbb;
     border-radius: 5px;
+    width: 100%;
+    margin: 0 20px;
 }
 
 .entry-card > .card-header {
@@ -151,4 +153,53 @@ tr:nth-child(even) {
 
 td > form {
     margin: 0;
+}
+
+.img-container {
+    cursor: pointer;
+}
+
+input.img-controller[type=checkbox]:checked + .img-container {
+    z-index: 100;
+    position: fixed;
+    background-color: rgba(1, 1, 1, 0.65);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: default;
+}
+
+input.img-controller[type=checkbox]:checked + .img-container > .img-element {
+    max-width: 80vw;
+}
+
+input.img-controller[type=checkbox]:checked + .img-container > .close-btn {
+    display: block;
+    cursor: pointer;
+}
+
+input.img-controller[type=checkbox] {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.close-btn {
+    display: none;
+    color: white;
+    position: fixed;
+    right: 0;
+    top: 0;
+    font-size: 40pt;
+    font-weight: bold;
+    padding: 0 10px;
+}
+
+.img-element {
+    max-height: 400px;
+    max-width: 50vw;
 }
