fix image gallery style & minor fixes

--- a/assets/style.css
+++ b/assets/style.css
@@ -203,3 +203,9 @@ input.img-controller[type=checkbox] {
     max-height: 400px;
     max-width: 50vw;
 }
+
+.img-gallery {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
