--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;700&display=swap');
+
+:root {
+  --primary-color: #004524;
+  --secondary-color: #556832;
+}
+
 body {
-    font-family: ProximaNova, Helvetica, sans-serif;
+    font-family: 'Vollkorn', serif; font-size: 14pt;
     margin: 0;
     color: rgb(36, 47, 51);
     display: flex;
@@ -12,14 +19,14 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: rgb(0, 67, 89);
+    background-color: var(--primary-color);
     color: white;
     padding: 5px 15px;
     justify-content: space-between;
 }
 
 footer {
-    background-color: rgb(0, 67, 89);
+    background-color: var(--primary-color);
     color: white;
     padding: 5px 15px;
 }
@@ -56,10 +63,10 @@ a.white:hover {
 }
 
 button, th {
-    background-color: rgb(0, 153, 204);
+    background-color: var(--secondary-color);
     color: white;
     padding: 5px 10px;
-    font-weight: bold;
+    font-weight: 700; font-family: 'Vollkorn', serif; font-size: 14pt;
 }
 
 button {
@@ -83,7 +90,7 @@ form.fixed-width {
     margin: 15px auto !important;
     background-color: lightgray;
     border-radius: 5px;
-    font-weight: bold;
+    font-weight: 700; font-family: 'Vollkorn', serif; font-size: 14pt;
     padding: 10px 15px;
     display: flex;
     align-items: center;
@@ -140,7 +147,7 @@ tr:nth-child(even) {
 }
 
 .entry-card > .card-header {
-    font-weight: bold;
+    font-weight: 700; font-family: 'Vollkorn', serif; font-size: 14pt;
     background-color: #f2f2f2;
     border-bottom: 1px solid #bbb;
     border-top-right-radius: 5px;
@@ -195,7 +202,7 @@ input.img-controller[type=checkbox] {
     right: 0;
     top: 0;
     font-size: 40pt;
-    font-weight: bold;
+    font-weight: 700; font-family: 'Vollkorn', serif;
     padding: 0 10px;
 }
 
